--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto = update
+
+mockaroo.url = https://my.api.mockaroo.com/
+mockaroo.key = 63304c70
