--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 mockaroo.url = https://my.api.mockaroo.com/
 mockaroo.key = 63304c70
+
+ftp.username = bence
+ftp.password = hausk123
