Ftp credentials are in environment variables now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto = update
 mockaroo.url = https://my.api.mockaroo.com/
 mockaroo.key = 63304c70
 
-ftp.username = bence
-ftp.password = hausk123
+ftp.username = ${FTP_USERNAME}
+ftp.password = ${FTP_PASSWORD}
